--- a/WebContent/staticFile/iframe/caidan.html
+++ b/WebContent/staticFile/iframe/caidan.html
@@ -20,7 +20,7 @@
 						<a href="/SideLine/UserServlet?ask=check" target="mainFrame">查看个人资料</a>
                 </dd>
                 <dd><a href="/SideLine/ReaumeServlet?ask=checkreaume" target="mainFrame">查看个人简历</a></dd>
-                <dd><a href="/SideLine/RecruitServlet?ask=checkrecruit" target="mainFrame">查看个人招聘</a></dd>
+                <dd><a href="/SideLine/RecruitServlet?ask=selectallowrecruit" target="mainFrame">查看所有招聘</a></dd>
                 <dd><a href="/SideLine/HireServlet?ask=checkhire" target="mainFrame"> 查看工作经历</a></dd>
             </dl>
         </li>
@@ -29,12 +29,6 @@
             <dl class="layui-nav-child">
                 <dd class="layui-this"><a href="/SideLine/ReaumeServlet?ask=writereaume" target="mainFrame">填写简历</a></dd>
                 <dd><a href="/SideLine/RecruitServlet?ask=recommendjob" target="mainFrame">查看推荐工作</a></dd>
-            </dl>
-        </li>
-        <li class="layui-nav-item">
-            <a href="javascript:;">我要招聘</a>
-            <dl class="layui-nav-child">
-                <dd class="layui-this"><a href="/SideLine/RecruitServlet?ask=writerecruit" target="mainFrame">填写招聘表</a></dd>
             </dl>
         </li>
         <li class="layui-nav-item">
