--- a/WebContent/staticFile/iframe/head.html
+++ b/WebContent/staticFile/iframe/head.html
@@ -20,11 +20,11 @@
 </div>
 
 
-<script type="text/javascript">
-$(function(){
-    $('#background').height($(window).height());
-    $('#background').width($(window).width());
-});
-</script>
+<!-- <script type="text/javascript"> -->
+<!--  $(function(){ -->
+<!--      $('#background').height($(window).height()); -->
+<!--      $('#background').width($(window).width()); -->
+<!--  }); -->
+<!-- </script> -->
 </body>
 </html>
